# WebsiteDeveloperBot

./: .dockerignore  .env.example  .gitignore  Claude.md  Dockerfile  README.md  local_server.py  pyproject.toml  wrangler.jsonc
src/: bot.py  claude_client.py  github_client.py  html_validator.py  whatsapp.py  worker.py
src/website_developer_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
